Home page added.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <ul>
+  <li><a routerLink="/home" routerLinkActive="activeMenu">Home</a></li>
   <li><a routerLink="/datepicker" routerLinkActive="activeMenu">Labs</a></li>
   <li><a routerLink="/formsdemo" routerLinkActive="activeMenu">Forms demo</a></li>
   <!-- <li><a>{{today}}</a></li> -->
