--- a/src/app/components/date-picker/date-picker.component.html
+++ b/src/app/components/date-picker/date-picker.component.html
@@ -1,5 +1,7 @@
 <h1>Datepicker</h1>
 
+<app-hello-world message="eenBericht"></app-hello-world>
+
 <form (submit)="addContact()">
   <div>
     <label for="firstName">First name:</label>
