ContactList component added.

--- a/src/app/components/date-picker/date-picker.component.html
+++ b/src/app/components/date-picker/date-picker.component.html
@@ -2,30 +2,4 @@
 
 <app-contact-form (personAdded)="personAdded($event)" ></app-contact-form>
 
-<h2>The contacts</h2>
-
-<table class="table">
-  <tr>
-    <th scope="col">Name</th>
-    <th scope="col">E-mail address</th>
-    <th scope="col"></th>
-  </tr>
-  <tr scope="row" *ngFor="let p of personList">
-    <td *ngIf="!p.edit">{{p.firstName}} {{p.surname}}</td>
-    <td *ngIf="p.edit">
-      <input type="text" id="firstName" name="firstName" [(ngModel)]="p.firstName">
-      <input type="text" id="surname" name="surname" [(ngModel)]="p.surname">
-    </td>
-    <td *ngIf="!p.edit">{{p.email}}</td>
-    <td *ngIf="p.edit"><input type="text" id="email" name="email" [(ngModel)]="p.email"></td>
-    <td>
-      <div class="btn-group" role="group" aria-label="Basic example">
-        <button class="btn btn-primary" (click)="edit(p)">
-    <td *ngIf="!p.edit">Edit</td>
-    <td *ngIf="p.edit">Save</td>
-    </button>
-    <button class="btn btn-danger" (click)="delete(p)">Delete</button>
-    </div>
-    </td>
-  </tr>
-</table>
+<app-contact-list [persons]="personList" ></app-contact-list>
