--- a/src/app/components/date-picker/date-picker.component.html
+++ b/src/app/components/date-picker/date-picker.component.html
@@ -2,4 +2,4 @@
 
 <app-contact-form (personAdded)="personAdded($event)" ></app-contact-form>
 
-<app-contact-list [persons]="personList" ></app-contact-list>
+<app-contact-list [persons]="getPersons()" ></app-contact-list>
