Refactored Person to Contact.

--- a/src/app/components/date-picker/date-picker.component.html
+++ b/src/app/components/date-picker/date-picker.component.html
@@ -1,5 +1,5 @@
 <h1>Datepicker</h1>
 
-<app-contact-form (personAdded)="personAdded($event)" ></app-contact-form>
+<app-contact-form (contactAdded)="contactAdded($event)" ></app-contact-form>
 
-<app-contact-list [persons]="getPersons()" ></app-contact-list>
+<app-contact-list [contacts]="getContacts()" ></app-contact-list>
