--- a/src/app/components/contact-list/contact-list.component.html
+++ b/src/app/components/contact-list/contact-list.component.html
@@ -6,24 +6,24 @@
         <th scope="col">E-mail address</th>
         <th scope="col"></th>
     </tr>
-    <tr scope="row" *ngFor="let p of persons">
-        <td *ngIf="!p.edit">{{p.firstName}} {{p.surname}}</td>
-        <td *ngIf="p.edit">
-            <input type="text" id="firstName" name="firstName" [(ngModel)]="p.firstName">
-            <input type="text" id="surname" name="surname" [(ngModel)]="p.surname">
+    <tr scope="row" *ngFor="let c of contacts">
+        <td *ngIf="!c.edit">{{c.firstName}} {{c.surname}}</td>
+        <td *ngIf="c.edit">
+            <input type="text" id="firstName" name="firstName" [(ngModel)]="c.firstName">
+            <input type="text" id="surname" name="surname" [(ngModel)]="c.surname">
         </td>
-        <td *ngIf="!p.edit">{{p.email}}</td>
-        <td *ngIf="p.edit"><input type="text" id="email" name="email" [(ngModel)]="p.email"></td>
+        <td *ngIf="!c.edit">{{c.email}}</td>
+        <td *ngIf="c.edit"><input type="text" id="email" name="email" [(ngModel)]="c.email"></td>
         <td>
             <div class="btn-group" role="group" aria-label="Basic example">
-                <button class="btn btn-primary" (click)="edit(p)">
-        <td *ngIf="!p.edit">Edit</td>
-        <td *ngIf="p.edit">Save</td>
+                <button class="btn btn-primary" (click)="edit(c)">
+        <td *ngIf="!c.edit">Edit</td>
+        <td *ngIf="c.edit">Save</td>
         </button>
         <button class="btn btn-danger" (click)="delete(p)">Delete</button>
         </div>
         </td>
     </tr>
     <!-- or with a row component: -->
-    <!-- <tr *ngFor="let c of persons" contact-row [contact]="c" (del)="delete($event)"></tr> -->
+    <!-- <tr *ngFor="let c of contacts" contact-row [contact]="c" (del)="delete($event)"></tr> -->
 </table>
