--- a/src/app/components/contact-list/contact-list.component.html
+++ b/src/app/components/contact-list/contact-list.component.html
@@ -20,7 +20,7 @@
         <td *ngIf="!c.edit">Edit</td>
         <td *ngIf="c.edit">Save</td>
         </button>
-        <button class="btn btn-danger" (click)="delete(p)">Delete</button>
+        <button class="btn btn-danger" (click)="delete(c)">Delete</button>
         </div>
         </td>
     </tr>
