--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -4,7 +4,7 @@ ul {
     padding: 0;
     overflow: hidden;
     border: 1px solid #e7e7e7;
-    background-color: #f3f3f3;
+    background-color: rgb(30, 138, 210);
   }
   
   li {
@@ -13,23 +13,24 @@ ul {
   }
 
   li:last-child {
-    border-right: none;
+    border-right: none; 
   }
-  
 
   li a, li #today {
     display: block;
-    color: #666;
+    color: #313131;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
+    font-weight: bold;
   }
   
   li a:hover:not(.active) {
     background-color: #ddd;
+    color: #444444;
   }
   
   li .activeMenu {
-    color: white;
+    color: rgb(238, 238, 238);;
     background-color: #585858;
   }
