--- a/src/app/components/date-picker/date-picker.component.html
+++ b/src/app/components/date-picker/date-picker.component.html
@@ -1,5 +1,6 @@
 <h1>Datepicker</h1>
 
-<app-contact-form (contactAdded)="contactAdded($event)" ></app-contact-form>
+<!-- element selector -->
+<app-contact-form></app-contact-form>
 
-<app-contact-list [contacts]="getContacts()" ></app-contact-list>
+<app-contact-list></app-contact-list>
