--- a/src/app/components/forms-demo/forms-demo.component.html
+++ b/src/app/components/forms-demo/forms-demo.component.html
@@ -1,4 +1,8 @@
 <app-template-driven-form></app-template-driven-form>
 <app-model-driven-form></app-model-driven-form>
 
-<app-hello-world [message]="eenBericht" (thankYou)="handleThankYou($event)">kan ik hier iets neerzetten?</app-hello-world>
+<app-hello-world [message]="eenBericht"
+                 (thankYou)="handleThankYou($event)"
+                 (contentChanged)="handleChange($event)">
+  kan ik hier iets neerzetten?
+</app-hello-world>
