--- a/src/styles.css
+++ b/src/styles.css
@@ -2,6 +2,7 @@
 
 body {
 	font-family: sans-serif;
+	background-color: lightgray;
 }
 
 form div {
@@ -14,6 +15,7 @@ form label {
 }
 input {
 	padding: 7px;
+	margin-right: 7px;
 }
 th, td {
 	padding: 7px;
@@ -33,7 +35,7 @@ td button { /* edit, delete and save buttons in contacts table*/
 	background: none;
 	font-family: sans-serif;
 	color: blue;
-	text-decoration: underline;
+	text-decoration: none;
 	font-size: 1em;
 }
 
@@ -42,6 +44,7 @@ input {
 	border-radius: 5px;
 	transition: 0.2s ease all;
 	outline: none;
+	background-color:rgb(238, 238, 238);
 }
 td a:first-child {
 	margin-right: 10px;
