--- a/src/app/components/contact-list/contact-list.component.html
+++ b/src/app/components/contact-list/contact-list.component.html
@@ -18,10 +18,8 @@
     <td *ngIf="c.edit"><input type="text" id="email" name="email" [(ngModel)]="c.email"></td>
     <td>
       <div class="btn-group" role="group" aria-label="Basic example">
-        <button class="btn btn-primary" (click)="edit(c)">
-          <span *ngIf="!c.edit">Edit</span>
-          <span *ngIf="c.edit">Save</span>
-        </button>
+        <button *ngIf="!c.edit" class="btn btn-primary" (click)="edit(c)">Edit</button>
+        <button *ngIf="c.edit" class="btn btn-primary" (click)="save(c)">Save</button>
         <button class="btn btn-danger" (click)="delete(c)">Delete</button>
       </div>
     </td>
