--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,6 @@
   <li><a routerLink="/formsdemo" routerLinkActive="activeMenu">Forms demo</a></li>
   <li><a routerLink="/{{logLink}}" routerLinkActive="activeMenu">{{logLabel}}</a></li>
 </ul>
-<div class="user" *ngIf="!isLoggedIn()">Not logged in.</div>
-<div class="user" *ngIf="isLoggedIn()">Logged in as {{loggedInUsername}}.</div>
+<div class="user">{{loggedInMessage}}</div>
 
 <router-outlet></router-outlet>
