--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -6,7 +6,7 @@
   </div>
   <div>
     <label for="password">Password:</label>
-    <input type="text" id="password" name="password" [(ngModel)]="user.password" required>
+    <input type="password" id="password" name="password" [(ngModel)]="user.password" required>
     <button [disabled]="f.invalid">Ok</button>
   </div>
 </form>
